feat adicionado testes de core(gateway, entity,uc) y de infra(Controller)
